Changed to gridbag layout, improved the UI

--- a/src/com/salestax/SalexTaxesUI.form
+++ b/src/com/salestax/SalexTaxesUI.form
@@ -7,9 +7,9 @@
     <properties/>
     <border type="none"/>
     <children>
-      <component id="f5fcf" class="javax.swing.JTextPane" binding="goodsAfterTax">
+      <component id="f5fcf" class="javax.swing.JTextArea" binding="goodsAfterTax">
         <constraints>
-          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
+          <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="50"/>
           </grid>
           <gridbag weightx="1.0" weighty="1.0"/>
@@ -18,12 +18,19 @@
       </component>
       <component id="94bdd" class="javax.swing.JButton" binding="calculateButton">
         <constraints>
-          <grid row="2" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="2" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
           <gridbag weightx="1.0" weighty="0.0"/>
         </constraints>
         <properties>
           <text value="Calculate Receipt"/>
         </properties>
+      </component>
+      <component id="b3374" class="javax.swing.JToolBar$Separator">
+        <constraints>
+          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <gridbag weightx="0.0" weighty="0.0"/>
+        </constraints>
+        <properties/>
       </component>
       <component id="3311b" class="javax.swing.JTextArea" binding="goodsBeforeTax">
         <constraints>
